@@ -9,6 +9,7 @@ dependencies {
     implementation("com.squareup.moshi:moshi-kotlin:1.13.0")
     implementation("org.apache.commons:commons-text:1.9")
 
+    api("com.beyondgrader.resource-agent:agent:2022.6.0")
     api("com.github.cs125-illinois.jeed:core:2022.6.1")
     api("com.github.cs125-illinois:jenisol:2022.6.2")
     api("io.kotest:kotest-runner-junit5:5.3.0")
@@ -24,6 +25,12 @@ tasks {
         add("archives", sourcesJar)
     }
 }
+tasks.withType(Test::class.java) {
+    val agentJarPath = configurations["runtimeClasspath"].resolvedConfiguration.resolvedArtifacts.find {
+        it.moduleVersion.id.group == "com.beyondgrader.resource-agent"
+    }!!.file.absolutePath
+    jvmArgs("--enable-preview", "-javaagent:$agentJarPath")
+}
 publishing {
     publications {
         create<MavenPublication>("lib") {
@@ -32,5 +39,5 @@ publishing {
     }
 }
 kotlin {
-    kotlinDaemonJvmArgs = listOf("-Dfile.encoding=UTF-8", "--illegal-access=permit")
+    kotlinDaemonJvmArgs = listOf("-Dfile.encoding=UTF-8")
 }
